// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateCatalogs > generates TypeScript from full workspace 1`] = `
"/**
 * Auto-generated Silk catalog definitions.
 *
 * DO NOT EDIT THIS FILE DIRECTLY.
 * Instead, update pnpm-workspace.yaml and run: pnpm run generate:catalogs
 *
 * Generated: 2026-01-01T00:00:00.000Z
 *
 * @packageDocumentation
 */

import type { SilkCatalogs, SilkPeerDependencyRules } from "./types.js";

/**
 * The complete Silk catalogs generated from pnpm-workspace.yaml.
 *
 * - \`silk\`: Current/latest versions for direct dependencies
 * - \`silkPeers\`: Permissive ranges for peerDependencies
 * - \`silkOverrides\`: Security overrides for known CVEs
 * - \`silkOnlyBuiltDependencies\`: Packages allowed to run build scripts
 * - \`silkPublicHoistPattern\`: Packages to hoist to virtual store root
 */
export const silkCatalogs: SilkCatalogs = {
	silk: {
		"@effect/platform": "^0.96.1",
		effect: "^3.21.2",
		typescript: "^6.0.3",
	},
	silkPeers: {
		"@effect/platform": ">=0.96.0",
		effect: ">=3.21.0",
		typescript: "^6.0.0",
	},
	silkOverrides: {
		lodash: "^4.17.23",
		tmp: "^0.2.4",
	},
	silkOnlyBuiltDependencies: [
		"@parcel/watcher",
		"esbuild",
	],
	silkPublicHoistPattern: [
		"turbo",
		"typescript",
	],
};

/**
 * Peer dependency rules generated from pnpm-workspace.yaml.
 */
export const silkPeerDependencyRules: SilkPeerDependencyRules = {
	allowedVersions: {},
	ignoreMissing: [],
	allowAny: [],
};
"
`;

exports[`generateCatalogs > generates TypeScript from minimal workspace 1`] = `
"/**
 * Auto-generated Silk catalog definitions.
 *
 * DO NOT EDIT THIS FILE DIRECTLY.
 * Instead, update pnpm-workspace.yaml and run: pnpm run generate:catalogs
 *
 * Generated: 2026-01-01T00:00:00.000Z
 *
 * @packageDocumentation
 */

import type { SilkCatalogs, SilkPeerDependencyRules } from "./types.js";

/**
 * The complete Silk catalogs generated from pnpm-workspace.yaml.
 *
 * - \`silk\`: Current/latest versions for direct dependencies
 * - \`silkPeers\`: Permissive ranges for peerDependencies
 * - \`silkOverrides\`: Security overrides for known CVEs
 * - \`silkOnlyBuiltDependencies\`: Packages allowed to run build scripts
 * - \`silkPublicHoistPattern\`: Packages to hoist to virtual store root
 */
export const silkCatalogs: SilkCatalogs = {
	silk: {
		typescript: "^5.7.0",
	},
	silkPeers: {
		typescript: "^5.7.0",
	},
	silkOverrides: {

	},
	silkOnlyBuiltDependencies: [

	],
	silkPublicHoistPattern: [

	],
};

/**
 * Peer dependency rules generated from pnpm-workspace.yaml.
 */
export const silkPeerDependencyRules: SilkPeerDependencyRules = {
	allowedVersions: {},
	ignoreMissing: [],
	allowAny: [],
};
"
`;
